MDEV-21786 myslqdump will forget sequence definition details on --no-data dump

- Original patch was contributed by Jani Tolonen <jani.k.tolonen@gmail.com>
https://github.com/an3l/server/commits/bb-10.3-anel-MDEV-21786-dump-sequence
which distinguishes data structure (linked list) of sequences from
tables.
- According to MDEV? added standard sql output to prevent future changes
of sequences and disabled locks for sequences
- Added test case for `MDEV-20070: mysqldump won't work correct on
sequences` where table column depends on sequence value @todo.